projects/compiler/test/typechecker/match/error_exhaustive_Enum_variants.1.out
Error at %FILE_NAME%:8:3
Unreachable match case
  |    _ => 4
       ^
The previous case(s) cover all possibilities for match target type 'Color'
